--- a/TestSerializeProject/TestSerializeProject.Repository/TestSerializeProject.Repository.csproj
+++ b/TestSerializeProject/TestSerializeProject.Repository/TestSerializeProject.Repository.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserRepository.cs" />
   </ItemGroup>
