--- a/TestSerializeProject/TestSerializeProject.Test/TestSerializeProject.Test.csproj
+++ b/TestSerializeProject/TestSerializeProject.Test/TestSerializeProject.Test.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="PersonTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserTest.cs" />
   </ItemGroup>
