--- a/TestSerializeProject/TestSerializeProject.Repository/TestSerializeProject.Repository.csproj
+++ b/TestSerializeProject/TestSerializeProject.Repository/TestSerializeProject.Repository.csproj
@@ -47,6 +47,7 @@
     <Compile Include="PersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User1Repository.cs" />
+    <Compile Include="User2Repository.cs" />
     <Compile Include="UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
