--- a/TestSerializeProject/TestSerializeProject.Test/TestSerializeProject.Test.csproj
+++ b/TestSerializeProject/TestSerializeProject.Test/TestSerializeProject.Test.csproj
@@ -55,6 +55,7 @@
     <Compile Include="PersonTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User1Test.cs" />
+    <Compile Include="User2Test.cs" />
     <Compile Include="UserTest.cs" />
   </ItemGroup>
   <ItemGroup>
